--- a/index.html
+++ b/index.html
@@ -8,13 +8,62 @@ and open the template in the editor.
         <title>Todo List</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <link href="css/bootstrap.min.css" rel="stylesheet" media="screen">
+        <link rel="stylesheet" href="css/font-awesome.min.css">
+        <link rel="stylesheet" href="css/font-awesome.css">
         <link href="css/todo.css" rel="stylesheet" type="text/css">
         <link href='http://fonts.googleapis.com/css?family=Damion' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow' rel='stylesheet' type='text/css'>
-        <script data-main="js/main.js" src="lib/require.js"></script>
-        <script src="lib/bootstrap.js"></script>
+
     </head>
     <body>
+
+        <div class="title">todos</div>
+
+        <div class="container">
+
+            <div class="header">
+                <div class="header-top"></div>
+                <div class="header-content" id="create-todo">
+                    <div class="header-left-part">
+                        <a href="#"><i class="icon-minus icon-2x"></i></a>
+                    </div>
+                    <input id="new-todo" placeholder="What needs to be done?" type="text" />
+                    <!--                    <span class="ui-tooltip-top">Press Enter to save this task</span>-->
+                </div>
+            </div>
+
+            <div class="content" id="todoapp">
+                <div class="content-left-part"></div>
+                <ul class="todo-list" id="todo-list">
+                    <li>
+                        <div class="view">
+                            <input class="toggle" type="checkbox">
+                            <label>item 1</label>
+                            <button class="destroy"></button>
+                        </div>
+                        <input class="edit" value="item 1">
+                    </li>
+                    <li>
+                        <div class="view">
+                            <input class="toggle" type="checkbox">
+                            <label>item 2</label>
+                            <button class="destroy"></button>
+                        </div>
+                        <input class="edit" value="item 2">
+                    </li>
+                </ul>
+                <!--                <div id="todo-stats"></div>-->
+            </div>
+
+            <div class="footer">
+
+            </div>
+
+        </div>
+
+
+        <!--        <script data-main="js/main.js" src="lib/require.js"></script>-->
+        <script src="lib/bootstrap.js"></script>
 
     </body>
 </html>
